Non-unified build fixes, early August 2022 edition https://bugs.webkit.org/show_bug.cgi?id=243395

Unreviewed non-unified build fixes.

* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
  Add missing LayoutListMarkerBox.h header inclusion.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:
  Add missing InlineFormattingContext.h header inclusion.
* Source/WebCore/svg/SVGUseElement.h: Remove unneeded SVGElement forward declaration.
* Source/WebKit/UIProcess/API/C/WKPreferences.cpp: Add missing APIArray.h header inclusion.
* Source/WebKit/WebProcess/WebCoreSupport/WebNotificationClient.h: Add missing
  wtf/HashSet.h header inclusion.

Canonical link: https://commits.webkit.org/252995@main